<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/TextViewLight"
        android:text="@string/schedule_meeting"
        android:layout_marginTop="50dp"
        android:textSize="@dimen/sp_20"
        android:layout_gravity="center_horizontal"/>

    <TextView
        style="@style/TextViewLight"
        android:text="@string/name"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"/>

    <EditText
        android:id="@+id/etName"
        style="@style/EditTextName"
        android:hint="@string/aditya_cheke"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDate"
            style="@style/ButtonTiming"
            android:text="@string/tue_22_december_2020"/>

        <Button
            android:id="@+id/btnTime"
            style="@style/ButtonTiming"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/_11_30am"/>

    </LinearLayout>

    <TextView
        style="@style/TextViewLight"
        android:layout_marginStart="@dimen/dp_20"
        android:text="@string/people_to_invite"/>

    <EditText
        android:id="@+id/etPrateek"
        style="@style/EditTextName"
        android:drawableEnd="@drawable/ic_baseline_search_24"
        android:hint="@string/prateek"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:background="@android:color/transparent"
            style="@style/ImageView"
            android:src="@drawable/prateek_sukla"/>

        <ImageView
            android:background="@android:color/transparent"
            style="@style/ImageView"
            android:src="@drawable/jeff_bezos"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_margin="@dimen/dp_20"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_width="match_parent">
        <TextView
            style="@style/EditTextName"
            android:layout_width="wrap_content"
            android:text="@string/prateek_shukla"
            android:drawablePadding="@dimen/sp_20"
            android:layout_margin="30dp"
            app:drawableEndCompat="@drawable/tickstar"
            app:drawableStartCompat="@drawable/prateek_sukla" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            style="@style/EditTextName"
            android:layout_margin="@dimen/dp_20"
            android:layout_width="wrap_content"
            android:text="@string/jeff_bezos"
            android:drawablePadding="@dimen/sp_20"
            app:drawableStartCompat="@drawable/jeff_bezos" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        style="@style/ButtonTiming"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:text="@string/notify_people_on_slack"
        android:layout_gravity="center_horizontal"
        android:drawablePadding="@dimen/dp_20"
        app:drawableEndCompat="@drawable/slack" />

    <Button
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/create_meeting"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20"
        android:background="#52cace"/>
</LinearLayout>